bbox read and ingest through API
