# api/models/models.gen.go
@@ -3,6 +3,27 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version 2.5.1 DO NOT EDIT.
 package models
 
+// BoundingBox defines model for BoundingBox.
+type BoundingBox struct {
+	// Height height of the bounding box
+	Height float32 `json:"height"`
+
+	// Id ID of the bounding box
+	Id string `json:"id"`
+
+	// Label label
+	Label string `json:"label"`
+
+	// Width width of the bounding box
+	Width float32 `json:"width"`
+
+	// Xc x coordinate of the center point
+	Xc float32 `json:"xc"`
+
+	// Yc y coordinate of the center point
+	Yc float32 `json:"yc"`
+}
+
 // Collection defines model for Collection.
 type Collection struct {
 	// Description Description of the collection
@@ -19,6 +40,18 @@ type Error struct {
 
 	// Message Error message
 	Message string `json:"message"`
+}
+
+// GetImage defines model for GetImage.
+type GetImage struct {
+	BoundingBoxes *[]BoundingBox `json:"bounding_boxes,omitempty"`
+
+	// Collection name of collection in which the image belongs
+	Collection string `json:"collection"`
+
+	// Id ID of the image
+	Id     string    `json:"id"`
+	Labels *[]string `json:"labels,omitempty"`
 }
 
 // ImageIngestionResponse defines model for ImageIngestionResponse.
@@ -131,6 +164,9 @@ type ListLabelsParams struct {
 
 // CreateCollectionJSONRequestBody defines body for CreateCollection for application/json ContentType.
 type CreateCollectionJSONRequestBody = NewCollection
+
+// ReadImageJSONRequestBody defines body for ReadImage for application/json ContentType.
+type ReadImageJSONRequestBody = GetImage
 
 // IngestImageJSONRequestBody defines body for IngestImage for application/json ContentType.
 type IngestImageJSONRequestBody = NewImage
